# Bevycom

./: Cargo.toml  README.md
assets/: cursor.aseprite
src/: boilerplate.rs  main.rs
