[package]
  name = "bevycom"
  authors     = ["Dominik Kaspar"]
  version     = "0.0.1"
  edition     = "2021"
  license     = "MIT OR Apache-2.0"
  repository  = "https://github.com/idedary/bevycom"

[profile.dev]
  opt-level = 3

[dependencies]

  # UI framework
  #bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex", branch="dev" }
  bevy_lunex = { path = "/home/dominik/Projects/Bytestring/bevy_lunex/crates/bevy_lunex", features=[] }

  # Game engine
  bevy = { version = "0.14.0-rc.4", default_features = false, features = [
    "bevy_asset",
    "bevy_audio",
    #"bevy_gilrs",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "multi_threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "tonemapping_luts",
    "dynamic_linking"
  ] }

